# pdf-search-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
src/pdf_search_mcp/: __init__.py  __main__.py  mcp_server.py  pdf_search.py  query.py  render_cg.py
tests/: conftest.py  test_mcp_server.py  test_pdf_search.py  test_query.py  test_render_cg.py
