[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-search-mcp"
version = "0.1.0"
description = "MCP server for full-text search across PDF document collections"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "ren", email = "ren@virku.ai"}]
dependencies = [
    "PyMuPDF>=1.24.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/renvk/pdf-search-mcp"
Repository = "https://github.com/renvk/pdf-search-mcp"
Issues = "https://github.com/renvk/pdf-search-mcp/issues"

[project.scripts]
pdf-search-mcp = "pdf_search_mcp.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
